--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <header class="header">
-    <section class="svg__layer">
+    <div class="svg__layer">
       <img src="/bgheader.svg" alt="svg" />
-    </section>
-    <section class="color__layer" aria-hidden="true"></section>
+    </div>
+    <div class="color__layer" aria-hidden="true"></div>
   </header>
 
   <main class="main">
@@ -24,7 +24,7 @@
 
       <h2 class="section__title">Beaucoup d’eau… très peu disponible</h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <p class="section__desc js-split-desc">
           <span class="section__descvalue">72 % </span>
           de la surface de la Terre est recouverte par les océans. L’eau est
@@ -32,7 +32,7 @@
           apparente masque une réalité plus complexe.
         </p>
 
-        <section class="dataviz dataviz--1">
+        <div class="dataviz dataviz--1">
           <p class="dataviz__descgauche">
             <span class="dataviz__descvalue">28%</span>Terre
           </p>
@@ -40,8 +40,8 @@
           <p class="dataviz__descdroite">
             <span class="dataviz__descvalue">72%</span>Eau
           </p>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 2 -->
@@ -62,8 +62,8 @@
     <section class="section section--3 sectionscroll" id="s3">
       <h2 class="section__title">Une eau majoritairement inaccessible</h2>
 
-      <section class="section__content">
-        <section class="section__left">
+      <div class="section__content">
+        <div class="section__left">
           <p class="section__desc js-split-desc">
             Environ
             <span class="section__descvalue">les trois quarts</span> de l’eau
@@ -74,20 +74,20 @@
           </p>
 
           <img class="section__goutte" src="/Gouttepleure.svg" alt="" aria-hidden="true" />
-        </section>
+        </div>
 
-        <section class="dataviz dataviz--3">
+        <div class="dataviz dataviz--3">
           <img class="dataviz__img" src="/glace.svg" alt="Glace_Dataviz3" />
           <p class="dataviz__desc">3/4</p>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 4 -->
     <section class="section section--4 sectionscroll" id="s4">
       <h2 class="section__title">Qui consomme le plus d’eau ?</h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <p class="section__desc js-split-desc">
           L’agriculture représente
           <span class="section__descvalue">58%</span> de la consommation
@@ -98,10 +98,10 @@
           <span class="section__descvalue">4%</span>.
         </p>
 
-        <section class="dataviz dataviz--4">
+        <div class="dataviz dataviz--4">
           <canvas class="section__canvas section__canvas--4" id="section4__canvas"></canvas>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 5 -->
@@ -110,8 +110,8 @@
         À la maison, l’eau coule vite… et se perd souvent
       </h2>
 
-      <section class="section__content section__content--col">
-        <section class="dataviz dataviz--5">
+      <div class="section__content section__content--col">
+        <div class="dataviz dataviz--5">
           <p class="dataviz__descgauche">
             <span class="dataviz__descvalue">148L</span>
           </p>
@@ -122,7 +122,7 @@
           <p class="dataviz__descdroite">
             <span class="dataviz__descvalue">4000L à 9000L</span>Terre
           </p>
-        </section>
+        </div>
 
         <p class="section__desc js-split-desc">
           La consommation d’eau potable représente environ
@@ -131,7 +131,7 @@
           utilisée pour produire notre alimentation et nos biens, atteint
           <span class="section__descvalue">4 000 à 9 000 litres par jour et par personne</span>.
         </p>
-      </section>
+      </div>
     </section>
 
     <!-- SECTION 6 -->
@@ -140,7 +140,7 @@
         À la maison, l’eau coule vite… et se perd souvent
       </h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <p class="section__desc js-split-desc">
           La consommation d’eau potable représente environ
           <span class="section__descvalue">148 litres par jour et par personne</span>, tandis que l’empreinte en eau
@@ -149,17 +149,17 @@
           <span class="section__descvalue">4 000 à 9 000 litres par jour et par personne</span>.
         </p>
 
-        <section class="dataviz dataviz--6">
+        <div class="dataviz dataviz--6">
           <canvas class="section__canvas section__canvas--6" id="section6__canvas"></canvas>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 7 -->
     <section class="section section--7 sectionscroll" id="s7">
       <h2 class="section__title">Les fuites, un gaspillage invisible</h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <p class="section__desc js-split-desc">
           Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau
           par jour, tandis qu’une chasse d’eau défectueuse peut dépasser 600
@@ -167,31 +167,31 @@
           normale.
         </p>
 
-        <section class="dataviz dataviz--7">
+        <div class="dataviz dataviz--7">
           <img class="dataviz__svg" src="/robinet.svg" alt="Robinet" />
           <canvas class="section__canvas section__canvas--7" id="section7__canvas"></canvas>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 8 -->
     <section class="section section--8 sectionscroll" id="s8">
       <h2 class="section__title">Agir pour préserver l'eau</h2>
 
-      <section class="section__content">
-        <section class="section__text">
+      <div class="section__content">
+        <div class="section__text">
           <p class="section__desc js-split-desc">
             Le réseau national d’assainissement et de distribution de l’eau
             perd environ
           </p>
           <p class="section__descvalue section__descvalue--xl js-split-desc">1 litre sur 5</p>
           <p class="section__desc js-split-desc">à cause des fuites.</p>
-        </section>
+        </div>
 
-        <section class="dataviz dataviz--8">
+        <div class="dataviz dataviz--8">
           <canvas class="section__canvas section__canvas--8" id="section8__canvas"></canvas>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 9 -->
@@ -200,7 +200,7 @@
         Une consommation d’eau souvent invisible
       </h2>
 
-      <section class="section__content section__content--center">
+      <div class="section__content section__content--center">
         <p class="section__desc js-split-desc section__desc--center">
           Certains produits du quotidien nécessitent de grandes quantités
           d’eau pour être fabriqués. Produire un kilogramme de bœuf demande
@@ -212,7 +212,7 @@
           de notre consommation d’eau est indirecte, liée à la production des
           biens et services que nous utilisons quotidiennement.
         </p>
-      </section>
+      </div>
     </section>
 
     <!-- SECTION 10 -->
@@ -221,7 +221,7 @@
         L’industrie textile, un impact majeur sur l’eau
       </h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <p class="section__desc js-split-desc">
           À l’échelle mondiale, l’industrie textile prélève à elle seule <span class="section__descvalue">4%</span>
           de
@@ -231,10 +231,10 @@
           fabrication et de teinture des textiles.
         </p>
 
-        <section class="dataviz dataviz--10">
+        <div class="dataviz dataviz--10">
           <canvas class="section__canvas section__canvas--10" id="section10__canvas"></canvas>
-        </section>
-      </section>
+        </div>
+      </div>
     </section>
 
     <!-- SECTION 11 -->
@@ -243,24 +243,41 @@
         L’industrie textile, un impact majeur sur l’eau
       </h2>
 
-      <section class="section__content">
+      <div class="section__content">
         <figure class="section__figure">
-          <img src="/t-shirt.svg" alt="t-shirt" class="section__img section__img--11" />
+          <img src="/t-shirt.svg" alt="t-shirt" class="section__img section__img--11" id="tshirt" />
           <figcaption class="section__figcaption js-split-desc">
             <p class="section__desc"><span class="section__descvalue">2700</span> litres</p>
           </figcaption>
         </figure>
 
         <figure class="section__figure">
-          <img src="/jean.svg" alt="t-shirt" class="section__img section__img--11" />
+          <img src="/jean.svg" alt="jean" class="section__img section__img--11" id="jean" />
           <figcaption class="section__figcaption js-split-desc">
             <p class="section__desc">Jusqu'à<span class="section__descvalue">7000</span> litres</p>
           </figcaption>
         </figure>
-      </section>
+      </div>
     </section>
 
+    <!-- Section 12 -->
+    <section class="section section--12 sectionscroll">
+      <h2 class="section__title">L’océan, un puits de carbone essentiel</h2>
 
+      <div class="section__content">
+        <p class="section__desc js-split-desc">
+          Grâce à l’activité du plancton, l’océan stocke <span class="section__descvalue">50%</span>de carbone de plus
+          que l’atmosphère. Il joue ainsi un rôle central dans la régulation du climat en absorbant une grande partie du
+          dioxyde de carbone émis par les activités humaines.
+        </p>
+
+        <div class="dataviz dataviz--12">
+          <img src="/puit.svg" alt="puit">
+        </div>
+      </div>
+    </section>
+
+    <!-- Section  -->
   </main>
 
   <script type="module" src="/src/main.js"></script>
