--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <section class="section section--12 sectionscroll">
       <h2 class="section__title">L’océan, un puits de carbone essentiel</h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <p class="section__desc js-split-desc">
           Grâce à l’activité du plancton, l’océan stocke <span class="section__descvalue">50%</span>de carbone de plus
           que l’atmosphère. Il joue ainsi un rôle central dans la régulation du climat en absorbant une grande partie du
@@ -277,7 +277,11 @@
       </div>
     </section>
 
-    <!-- Section  -->
+    <!-- Section 13 -->
+
+
+
+
   </main>
 
   <script type="module" src="/src/main.js"></script>
