supp border de test

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <h2 class="section__title">Beaucoup d’eau… très peu disponible</h2>
 
-      <div class="section__content section__content--center" style="border: 2px red solid;">
+      <div class="section__content section__content--center">
         <p class="section__desc js-split-desc">
           <span class="section__descvalue">72 % </span>
           de la surface de la Terre est recouverte par les océans. L’eau est
