Fix Bug + Text align

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </h2>
 
       <div class="section__content section__content--center">
-        <p class="section__desc js-split-desc section__desc--center">
+        <p class="section__desc js-split-desc ">
           Certains produits du quotidien nécessitent de grandes quantités
           d’eau pour être fabriqués. Produire un kilogramme de bœuf demande
           entre
