--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         À la maison, l’eau coule vite… et se perd souvent
       </h2>
 
-      <div class="section__content section__content--col">
+      <div class="section__content">
         <div class="dataviz dataviz--5">
           <p class="dataviz__descgauche">
             <span class="dataviz__descvalue">148L</span>
           </p>
 
           <img class="dataviz__img" src="/goutte.svg" alt="goutte_Dataviz5" />
-          <img class="dataviz__img dataviz__img--blur" src="/goutte.svg" alt="" aria-hidden="true" />
+
 
           <p class="dataviz__descdroite">
             <span class="dataviz__descvalue">4000L à 9000L</span>Terre
@@ -137,16 +137,14 @@
     <!-- SECTION 6 -->
     <section class="section section--6 sectionscroll" id="s6">
       <h2 class="section__title">
-        À la maison, l’eau coule vite… et se perd souvent
+        Comment l’eau est utilisée à la maison
       </h2>
 
       <div class="section__content">
         <p class="section__desc js-split-desc">
-          La consommation d’eau potable représente environ
-          <span class="section__descvalue">148 litres par jour et par personne</span>, tandis que l’empreinte en eau
-          cachée, qui inclut toute l’eau
-          utilisée pour produire notre alimentation et nos biens, atteint
-          <span class="section__descvalue">4 000 à 9 000 litres par jour et par personne</span>.
+          Dans un foyer, l’eau sert avant tout à l’hygiène quotidienne, bien plus qu’à la boisson. Les usages liés au
+          linge, à la vaisselle et aux sanitaires constituent l’essentiel du reste de la consommation, tandis que la
+          cuisine et le jardin restent secondaires.
         </p>
 
         <div class="dataviz dataviz--6">
