Add Lotties files

--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
           de notre consommation d’eau est indirecte, liée à la production des
           biens et services que nous utilisons quotidiennement.
         </p>
+
+        <div class="dataviz dataviz--9">
+          <canvas class="section__canvas section__canvas--9" id="section9__canvas"></canvas>
+
+        </div>
       </div>
     </section>
 
