test lotti + add section 13

--- a/index.html
+++ b/index.html
@@ -282,6 +282,20 @@
 
     <!-- Section 13 -->
 
+    <section class="section section--13 sectionscroll">
+      <h2 class="section__title">L’océan, principal régulateur de la chaleur</h2>
+
+      <div class="section__content section__content--center">
+        <p class="section__desc js-split-desc">
+          Depuis 1950, l’océan a absorbé 90% de l’excès de chaleur lié au réchauffement climatique. Les continents et
+          l’atmosphère n’en ont absorbé qu’une part très limitée, avec respectivement 3% et 1%, ce qui souligne le
+          rôle majeur des océans dans l’équilibre thermique de la planète. </p>
+
+        <div class="dataviz dataviz--13">
+          <img src="/terrefeu.svg" alt="terre en feu">
+        </div>
+      </div>
+
 
 
 
