--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
 
   </main>
 
+  <footer class="section sectionscroll section--footer">
+    <h2 class="section__title">Et si l’eau de demain était celle que nous recyclons aujourd’hui ?</h2>
+    <p class="section__desc">
+      Alors que la ressource se raréfie, la réutilisation des eaux usées apparaît comme une piste essentielle pour
+      répondre aux besoins futurs.
+    </p>
+
+  </footer>
+
   <script type="module" src="/src/main.js"></script>
 </body>
 
