Add début section 14

--- a/index.html
+++ b/index.html
@@ -296,6 +296,46 @@
         </div>
       </div>
 
+    </section>
+
+    <!-- Section 14 -->
+    <section class="section section--14 sectionscroll">
+      <h2 class="section__title">Quand la pluie se fait rare, en 2023</h2>
+
+      <div class="section__content section__content--center">
+        <p class="section__desc js-split-desc">
+          En été, près des trois quarts des nappes phréatiques affichaient des niveaux inférieurs à la normale,
+          fragilisant l’approvisionnement en eau.
+        </p>
+
+        <p class="section__desc js-split-desc">
+          Une nappe sur cinq a atteint un niveau critique, limitant fortement les usages agricoles, industriels et
+          domestiques.
+        </p>
+
+        <p class="section__desc js-split-desc">
+          Les précipitations ont été inférieures de 20 % à la normale, aggravant durablement la sécheresse.
+        </p>
+
+        <p class="section__desc js-split-desc">
+          En août, une grande partie du territoire était soumise à des restrictions d’eau, dont 35 départements en
+          situation de crise.
+        </p>
+
+        <p class="section__desc js-split-desc">
+          Certaines régions ont connu jusqu’à 32 jours consécutifs sans pluie notable, un record depuis 1959.
+        </p>
+
+
+
+
+
+        <div class="dataviz dataviz--14">
+          <img src="/goutteplanete.svg" alt="goutte planete">
+        </div>
+      </div>
+    </section>
+
 
 
 
