--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
         <p class="section__desc js-split-desc">
           Les précipitations ont été inférieures de 20 % à la normale, aggravant durablement la sécheresse.
         </p>
+        <div class="dataviz dataviz--14">
+          <canvas class="section__canvas section__canvas--14" id="section14__canvas"></canvas>
+        </div>
 
         <p class="section__desc js-split-desc">
           En août, une grande partie du territoire était soumise à des restrictions d’eau, dont 35 départements en
@@ -330,9 +333,7 @@
 
 
 
-        <div class="dataviz dataviz--14">
-          <img src="/goutteplanete.svg" alt="goutte planete">
-        </div>
+
       </div>
     </section>
 
@@ -343,7 +344,7 @@
 
   <footer class="section sectionscroll section--footer">
     <h2 class="section__title">Et si l’eau de demain était celle que nous recyclons aujourd’hui ?</h2>
-    <p class="section__desc">
+    <p class="section__desc js-split-desc">
       Alors que la ressource se raréfie, la réutilisation des eaux usées apparaît comme une piste essentielle pour
       répondre aux besoins futurs.
     </p>
