--- a/index.html
+++ b/index.html
@@ -287,8 +287,10 @@
 
       <div class="section__content section__content--center">
         <p class="section__desc js-split-desc">
-          Depuis 1950, l’océan a absorbé 90% de l’excès de chaleur lié au réchauffement climatique. Les continents et
-          l’atmosphère n’en ont absorbé qu’une part très limitée, avec respectivement 3% et 1%, ce qui souligne le
+          Depuis 1950, l’océan a absorbé <span class="section__descvalue">90%</span>de l’excès de chaleur lié au
+          réchauffement climatique. Les
+          continents et
+          l’atmosphère n’en ont absorbé qu’une part très limitée, avec respecti vement 3% et 1%, ce qui souligne le
           rôle majeur des océans dans l’équilibre thermique de la planète. </p>
 
         <div class="dataviz dataviz--13">
