Add Goutte D'eau

--- a/index.html
+++ b/index.html
@@ -88,15 +88,20 @@
       <h2 class="section__title">Qui consomme le plus d’eau ?</h2>
 
       <div class="section__content">
-        <p class="section__desc js-split-desc">
-          L’agriculture représente
-          <span class="section__descvalue">58%</span> de la consommation
-          d’eau, suivie par l’eau potable avec
-          <span class="section__descvalue">26%</span>. Le refroidissement des
-          centrales compte pour <span class="section__descvalue">12%</span>,
-          tandis que l’industrie n’en représente que
-          <span class="section__descvalue">4%</span>.
-        </p>
+
+        <div class="section__group-left">
+          <p class="section__desc js-split-desc">
+            L’agriculture représente
+            <span class="section__descvalue">58%</span> de la consommation
+            d’eau, suivie par l’eau potable avec
+            <span class="section__descvalue">26%</span>. Le refroidissement des
+            centrales compte pour <span class="section__descvalue">12%</span>,
+            tandis que l’industrie n’en représente que
+            <span class="section__descvalue">4%</span>.
+          </p>
+
+          <img class="section__star" src="/GoutteStar.svg" alt="étoile">
+        </div>
 
         <div class="dataviz dataviz--4">
           <canvas class="section__canvas section__canvas--4" id="section4__canvas"></canvas>
