No PX + add Goutte Good

--- a/index.html
+++ b/index.html
@@ -146,13 +146,18 @@
       </h2>
 
       <div class="section__content">
-        <p class="section__desc js-split-desc">
-          Dans un foyer, l’eau sert avant tout à l’hygiène quotidienne, bien plus qu’à la boisson. Les usages liés au
-          linge, à la vaisselle et aux sanitaires constituent l’essentiel du reste de la consommation, tandis que la
-          cuisine et le jardin restent secondaires.
-        </p>
 
-        <div class="dataviz dataviz--6">
+        <div class="section__group-left">
+          <p class="section__desc js-split-desc">
+            Dans un foyer, l’eau sert avant tout à l’hygiène quotidienne, bien plus qu’à la boisson. Les usages liés au
+            linge, à la vaisselle et aux sanitaires constituent l’essentiel du reste de la consommation, tandis que la
+            cuisine et le jardin restent secondaires.
+          </p>
+
+          <img class="section__gouttegood" src="/GoutteGood.svg" alt="Goutte">
+        </div>
+
+        <div class=" dataviz dataviz--6">
           <canvas class="section__canvas section__canvas--6" id="section6__canvas"></canvas>
         </div>
       </div>
