--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
 
       <div class="section__content">
         <figure class="section__figure">
-          <img src="/t-shirt.svg" alt="t-shirt" class="section__img section__img--11" id="tshirt" />
+          <img src="/t-shirt.svg" alt="t-shirt" class="section__img section__img--11 tshirt" id="tshirt" />
           <figcaption class="section__figcaption js-split-desc">
             <p class="section__desc"><span class="section__descvalue">2700</span> litres</p>
           </figcaption>
         </figure>
 
         <figure class="section__figure">
-          <img src="/jean.svg" alt="jean" class="section__img section__img--11" id="jean" />
+          <img src="/jean.svg" alt="jean" class="section__img section__img--11 jean" id="jean" />
           <figcaption class="section__figcaption js-split-desc">
             <p class="section__desc">Jusqu'à<span class="section__descvalue">7000</span> litres</p>
           </figcaption>
