Add goutte Section 7

--- a/index.html
+++ b/index.html
@@ -169,12 +169,17 @@
       <h2 class="section__title">Les fuites, un gaspillage invisible</h2>
 
       <div class="section__content">
-        <p class="section__desc js-split-desc">
-          Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau
-          par jour, tandis qu’une chasse d’eau défectueuse peut dépasser 600
-          litres par jour, soit bien plus que la consommation quotidienne
-          normale.
-        </p>
+
+        <div class="section__group-left">
+          <p class="section__desc js-split-desc">
+            Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau
+            par jour, tandis qu’une chasse d’eau défectueuse peut dépasser 600
+            litres par jour, soit bien plus que la consommation quotidienne
+            normale.
+          </p>
+
+          <img class="section__star" src="/GoutteStar.svg" alt="Goutte étoiles">
+        </div>
 
         <div class="dataviz dataviz--7">
           <img class="dataviz__svg" src="/robinet.svg" alt="Robinet" />
