--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           À l’échelle mondiale, l’industrie textile prélève à elle seule <span class="section__descvalue">4%</span>
           de
           toute l’eau potable consommée. Elle est également responsable d’environ
-          <span class="section__descvalue">20%</span>de la pollution industrielle de l’eau, en raison des procédés
+          <span class="section__descvalue">20%</span> de la pollution industrielle de l’eau, en raison des procédés
           de
           fabrication et de teinture des textiles.
         </p>
@@ -306,7 +306,8 @@
           Depuis 1950, l’océan a absorbé <span class="section__descvalue">90%</span>de l’excès de chaleur lié au
           réchauffement climatique. Les
           continents et
-          l’atmosphère n’en ont absorbé qu’une part très limitée, avec respecti vement 3% et 1%, ce qui souligne le
+          l’atmosphère n’en ont absorbé qu’une part très limitée, avec respectivement <span
+            class="section__descvalue">3% et 1%</span>, ce qui souligne le
           rôle majeur des océans dans l’équilibre thermique de la planète. </p>
 
         <div class="dataviz dataviz--13">
