--- a/index.html
+++ b/index.html
@@ -322,31 +322,33 @@
       <h2 class="section__title">Quand la pluie se fait rare, en 2023</h2>
 
       <div class="section__content section__content--center">
-        <p class="section__desc js-split-desc">
+
+        <p class="section__desc section__flaque-text section__flaque-text--1 js-split-desc">
           En été, près des trois quarts des nappes phréatiques affichaient des niveaux inférieurs à la normale,
           fragilisant l’approvisionnement en eau.
         </p>
 
-        <p class="section__desc js-split-desc">
+        <p class="section__desc section__flaque-text section__flaque-text--2 js-split-desc">
           Une nappe sur cinq a atteint un niveau critique, limitant fortement les usages agricoles, industriels et
           domestiques.
         </p>
 
-        <p class="section__desc js-split-desc">
+        <p class="section__desc section__flaque-text section__flaque-text--3 js-split-desc">
           Les précipitations ont été inférieures de 20 % à la normale, aggravant durablement la sécheresse.
         </p>
-        <div class="dataviz dataviz--14">
-          <canvas class="section__canvas section__canvas--14" id="section14__canvas"></canvas>
-        </div>
 
-        <p class="section__desc js-split-desc">
+        <p class="section__desc section__flaque-text section__flaque-text--4 js-split-desc">
           En août, une grande partie du territoire était soumise à des restrictions d’eau, dont 35 départements en
           situation de crise.
         </p>
 
-        <p class="section__desc js-split-desc">
+        <p class="section__desc section__flaque-text section__flaque-text--5 js-split-desc">
           Certaines régions ont connu jusqu’à 32 jours consécutifs sans pluie notable, un record depuis 1959.
         </p>
+
+        <div class="dataviz dataviz--14">
+          <canvas class="section__canvas section__canvas--14" id="section14__canvas"></canvas>
+        </div>
       </div>
     </section>
 
