--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   </header>
 
   <main class="main">
-    <!-- SECTION 1 -->
     <section class="section section--1 sectionscroll" id="s1">
       <img class="section__flaque" src="/flaqueS1.svg" alt="flaque" aria-hidden="true" />
       <img class="section__goutte" src="/Goutteplonge.svg" alt="goutte" aria-hidden="true" />
@@ -44,7 +43,6 @@
       </div>
     </section>
 
-    <!-- SECTION 2 -->
     <section class="section section--2 sectionscroll" id="s2">
       <h2 class="section__title">L’eau douce : une ressource rare</h2>
 
@@ -58,11 +56,10 @@
       </p>
     </section>
 
-    <!-- SECTION 3 -->
     <section class="section section--3 sectionscroll" id="s3">
       <h2 class="section__title">Une eau majoritairement inaccessible</h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <div class="section__left">
           <p class="section__desc js-split-desc">
             Environ
@@ -83,11 +80,10 @@
       </div>
     </section>
 
-    <!-- SECTION 4 -->
     <section class="section section--4 sectionscroll" id="s4">
       <h2 class="section__title">Qui consomme le plus d’eau ?</h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
 
         <div class="section__group-left">
           <p class="section__desc js-split-desc">
@@ -109,13 +105,12 @@
       </div>
     </section>
 
-    <!-- SECTION 5 -->
     <section class="section section--5 sectionscroll" id="s5">
       <h2 class="section__title">
         À la maison, l’eau coule vite… et se perd souvent
       </h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <div class="dataviz dataviz--5">
           <p class="dataviz__descgauche">
             <span class="dataviz__descvalue">148L</span>
@@ -139,13 +134,12 @@
       </div>
     </section>
 
-    <!-- SECTION 6 -->
     <section class="section section--6 sectionscroll" id="s6">
       <h2 class="section__title">
         Comment l’eau est utilisée à la maison
       </h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
 
         <div class="section__group-left">
           <p class="section__desc js-split-desc">
@@ -164,11 +158,10 @@
       </div>
     </section>
 
-    <!-- SECTION 7 -->
     <section class="section section--7 sectionscroll" id="s7">
       <h2 class="section__title">Les fuites, un gaspillage invisible</h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
 
         <div class="section__group-left">
           <p class="section__desc js-split-desc">
@@ -188,11 +181,10 @@
       </div>
     </section>
 
-    <!-- SECTION 8 -->
     <section class="section section--8 sectionscroll" id="s8">
       <h2 class="section__title">Agir pour préserver l'eau</h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <div class="section__text">
           <p class="section__desc js-split-desc">
             Le réseau national d’assainissement et de distribution de l’eau
@@ -208,9 +200,8 @@
       </div>
     </section>
 
-    <!-- SECTION 9 -->
     <section class="section section--9 sectionscroll" id="s9">
-      <h2 class="section__title section__title--center">
+      <h2 class="section__title">
         Une consommation d’eau souvent invisible
       </h2>
 
@@ -234,13 +225,12 @@
       </div>
     </section>
 
-    <!-- SECTION 10 -->
     <section class="section section--10 sectionscroll" id="s10">
       <h2 class="section__title">
         L’industrie textile, un impact majeur sur l’eau
       </h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <p class="section__desc js-split-desc">
           À l’échelle mondiale, l’industrie textile prélève à elle seule <span class="section__descvalue">4%</span>
           de
@@ -256,13 +246,12 @@
       </div>
     </section>
 
-    <!-- SECTION 11 -->
     <section class="section section--11 sectionscroll" id="s11">
       <h2 class="section__title">
         L’industrie textile, un impact majeur sur l’eau
       </h2>
 
-      <div class="section__content">
+      <div class="section__content section__content--center">
         <figure class="section__figure">
           <img src="/t-shirt.svg" alt="t-shirt" class="section__img section__img--11 tshirt" id="tshirt" />
           <figcaption class="section__figcaption js-split-desc">
@@ -279,7 +268,6 @@
       </div>
     </section>
 
-    <!-- Section 12 -->
     <section class="section section--12 sectionscroll">
       <h2 class="section__title">L’océan, un puits de carbone essentiel</h2>
 
@@ -295,8 +283,6 @@
         </div>
       </div>
     </section>
-
-    <!-- Section 13 -->
 
     <section class="section section--13 sectionscroll">
       <h2 class="section__title">L’océan, principal régulateur de la chaleur</h2>
@@ -317,7 +303,6 @@
 
     </section>
 
-    <!-- Section 14 -->
     <section class="section section--14 sectionscroll">
       <h2 class="section__title">Quand la pluie se fait rare, en 2023</h2>
 
