--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
         <div class="section__group-left">
           <p class="section__desc js-split-desc">
-            Un simple robinet qui goutte peut gaspiller jusqu’à 120 litres d’eau
-            par jour, tandis qu’une chasse d’eau défectueuse peut dépasser 600
-            litres par jour, soit bien plus que la consommation quotidienne
+            Un simple robinet qui goutte peut gaspiller <span class="section__descvalue">jusqu’à 120 litres</span> d’eau
+            par jour, tandis qu’une chasse d’eau défectueuse peut dépasser <span class="section__descvalue">600
+              litres </span> par jour, soit bien plus que la consommation quotidienne
             normale.
           </p>
 
