pre last commit

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <span class="dataviz__descvalue">148L</span>
           </p>
 
-          <img class="dataviz__img" src="/goutte.svg" alt="goutte_Dataviz5" />
+          <canvas class="section__canvas section__canvas--5" id="section5__canvas"></canvas>
 
 
           <p class="dataviz__descdroite">
