--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="svg__layer">
       <img src="/bgheader.svg" alt="svg" />
     </div>
-    <div class="color__layer" aria-hidden="true"></div>
+    <div class="color__layer"></div>
   </header>
 
   <main class="main">
     <section class="section section--1 sectionscroll" id="s1">
-      <img class="section__flaque" src="/flaqueS1.svg" alt="flaque" aria-hidden="true" />
-      <img class="section__goutte" src="/Goutteplonge.svg" alt="goutte" aria-hidden="true" />
+      <img class="section__flaque" src="/flaqueS1.svg" alt="flaque" />
+      <img class="section__goutte" src="/Goutteplonge.svg" alt="goutte" />
 
       <h2 class="section__title">Beaucoup d’eau… très peu disponible</h2>
 
@@ -70,7 +70,7 @@
             principales ressources utilisables.
           </p>
 
-          <img class="section__goutte" src="/Gouttepleure.svg" alt="" aria-hidden="true" />
+          <img class="section__goutte" src="/Gouttepleure.svg" alt="" />
         </div>
 
         <div class="dataviz dataviz--3">
