Problème technique lotties

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
         </div>
 
         <div class="dataviz dataviz--8">
-          <canvas class="section__canvas section__canvas--8" id="section8__canvas"></canvas>
+          <img class="dataviz__rebuild" src="/eaux.svg" alt="eaux">
+          <!-- <canvas class="section__canvas section__canvas--8" id="section8__canvas"></canvas> -->
         </div>
       </div>
     </section>
@@ -219,7 +220,9 @@
         </p>
 
         <div class="dataviz dataviz--9">
-          <canvas class="section__canvas section__canvas--9" id="section9__canvas"></canvas>
+
+          <img src="/steak.svg" alt="steak" class="dataviz__imgsteak" />
+          <!-- <canvas class="section__canvas section__canvas--9" id="section9__canvas"></canvas> -->
 
         </div>
       </div>
